crates/cctui-tui/src/snapshots/cctui__view_snapshots__spend_panel_at_eighty_columns.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2152
expression: "render_screen_sized(&mut app, 80, 24)"
---
 Spend  $4.10 today  $26.50 30d  ! 1 need input — Ctrl+g
 MODEL          TODAY      7D     30D
 sonnet         $0.00   $0.00  $22.40
 opus           $4.10   $4.10   $4.10
 total          $4.10   $4.10  $26.50

 TOKENS            IN     OUT   CACHE   TOTAL
 1h               12k    3.4k    180k    195k
 today           210k     48k    1.9M    2.2M
 24h             480k     96k    4.2M    4.8M
 7d              3.1M    640k   29.0M   32.7M
 30d            12.4M    2.6M  118.0M  133.0M








 daily tokens  30d  peak 5.7M
                        ▁ ▅ ▂█▃
 cache busts 7d  $1.65  1.1M tok  4 busts
 r:refresh  Esc:back
