crates/cctui-tui/src/snapshots/cctui__view_snapshots__usage_panel_at_eighty_columns.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2016
expression: "render_screen_sized(&mut app, 80, 24)"
---
 cctui  v0.0.0-test  ● ~3  ▪ 0/0  $0.00  ! 1 need input — Ctrl+g  anthropic 91%
 1 Sessions  2  3   starred · live · dispatched  sort: activity ↓  group: status
  ┌ Usage   j/k move  Tab pane  Enter account  r refresh  Esc back ──────────┐
▸ │ POOLS                                                                    │
  │▸anthropic/default   5h ████████░░  78%          resets 1h   burn 1.4x ⚠  │
  │                     7d ███░░░░░░░  31%          resets 3d                │
  │ openai/default      5h ░░░░░░░░░░  not reported   1 unreadable           │
  │ ACCOUNTS                                                                 │
  │ alice (anthropic)   5h 91% ⚠  7d not reported                            │
  │ bob (openai)        $ $12.40                                             │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
