crates/cctui-tui/src/snapshots/cctui__view_snapshots__usage_panel_when_the_key_may_not_read_usage.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2033
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
  ┌ Usage   j/k move  Tab pane  Enter account  r refresh  Esc back ──────────────────────────────┐
▸ │ this key may not read usage                                                                  │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
