crates/cctui-tui/src/snapshots/cctui__view_snapshots__usage_panel_with_the_accounts_pane_focused.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2024
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  anthropic 91%
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
  ┌ Usage   j/k move  Tab pane  Enter account  r refresh  Esc back ──────────────────────────────┐
▸ │ POOLS                                                                                        │
  │ anthropic/default   5h ████████░░  78%          resets 1h   burn 1.4x ⚠                      │
  │                     7d ███░░░░░░░  31%          resets 3d                                    │
  │ openai/default      5h ░░░░░░░░░░  not reported   1 unreadable                               │
  │ ACCOUNTS                                                                                     │
  │ alice (anthropic)   5h 91% ⚠  7d not reported                                                │
  │▸bob (openai)        $ $12.40                                                                 │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
